js/js.translator/testData/incremental/invalidation/jsExportWithCrossModuleInliner/lib1/l1.0.kt
inline fun foo() = 77
fun gaz() = 99
